sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: illegal start of simple pattern
var:swap :Boolean Int = True
   ^AlgBubbleSort1:5: error: '=' expected but ';' found.
while (swap == false ) {
^