sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
var:swap :Boolean Int = True

while (swap == false ) {
swap == false 
	
	for ( i <- 0 to getNombreValeurs()-2 ) {
		if ( plusPetit(i:Int, i+1:Int) == false ){
			echange (i:Int, i+1:Int)
			swap == true
			
		} 
		else { 
		}
	}
		
		 
}
}

